# dedupe_trees

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  Vagrantfile  circle.yml  dedupe.py  dedupe_test.py  pyproject.toml  pytest.ini  run_dedupe.py  setup.py  test.py  test_dedupe.py  testing-requirements.txt
.circleci/: config.yml
.github/workflows/: feature.yml  publish.yml
dedupe/: __init__.py  dedupe.py
dedupe_trees/: __init__.py  __main__.py  dedupe_trees.py
test/: sha512catalog  test_dedupe.py
