[tool.poetry]
name = "dedupe_trees"
version = "0.1.0"
description = "Configurably deduplicate file hierarchies."
authors = ["David Reed <david@ktema.org>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
codecov = "^2.1.4"
flake8 = "^3.8.2"
black = "^19.10b0"
pre-commit = "^2.4.0"
rope = "^0.17.0"
pyinstaller = "^3.6"
isort = "^4.3.21"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.autohooks]
pre-commit = ["autohooks.plugins.isort", "autohooks.plugins.black"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
